# obsidian-second-brain

./: .env.example  CHANGELOG.md  README.md  SKILL.md  install.sh  llms.txt  pyproject.toml
commands/: discourse-pulse.md  idea-discovery.md  obsidian-adr.md  obsidian-architect.md  obsidian-board.md  obsidian-brainstorm.md  obsidian-capture.md  obsidian-emerge.md  obsidian-graduate.md  obsidian-learn.md  obsidian-notion-sync.md  obsidian-project.md  obsidian-recap.md  obsidian-research-deep.md  obsidian-research.md  obsidian-roadmap.md  obsidian-task.md  research-deep.md  research.md  thread-read.md  vault-deep-synthesis.md  youtube.md
references/: ai-first-rules.md  brainstorm-question-templates.md
scripts/: architect_scan.py  roadmap_synth.py
scripts/architect/: __init__.py  adr.py  ai_flow.py  ai_memory_detect.py  ai_rag_detect.py  api_surface.py  api_surface_render.py  changelog.py  commit_decisions.py  companion_detect.py  deps.py  entry_points.py  flows.py  git_history.py  jobs.py  lang.py  lockfile.py  manifest.py  manifest_diff.py  migration.py  personas.py  prompt_extract.py  proposal.py  public_surface.py  readme.py  refresh.py  repomix.py  research_walker.py  scan.py  sections.py  sentinels.py  stack.py  todos.py  walker.py
scripts/board/: refresh.py
scripts/commands/: repo_resolver.py
scripts/cron/: board-refresh-prompt.txt  trigger-board-refresh.sh  trigger-weekly-recap.sh  weekly-recap-prompt.txt
scripts/research/: discourse_pulse.py  idea_discovery.py  research.py  research_deep.py  thread_read.py  youtube_extract.py
tests/research/: smoke.sh  (+11 more)
(+171 files in other folders)
